<?xml version="1.0" encoding="utf-8"?><!--Bhargav Patel (N01373029) & Ripal Patel (N01354619) & Vidhi Kanhye (N01354573) & Nicholas Mohan (N01361663), Section-RNA-->

<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">SMARTBEATS</string>
    <string name="choose_color">Choose Color</string>
    <string name="chosen_color">Your chosen color is:</string>
    <string name="set_color">Set</string>
    <string name="light_settings">Light Settings</string>
    <string name="show_settings">show Settings</string>
    <string name="change_background">Change background Color</string>
    <string name="portrait_mode">Lock to Portrait Mode</string>
    <string name="adjust_bright">Adjust Brightness:</string>
    <string name="colour_picker_dialog_cancel_btn">Cancel</string>
    <string name="colour_picker_dialog_ok_btn">OK</string>
    <string name="colour_picker_dialog_title">Choose Color</string>
    <string name="menu_bar_help_btn_link">https://www.google.ca</string>
    <string name="menu_bar_music_btn_link">https://www.youtube.ca</string>
    <string name="snackbar_pwr_btn_on">Power On</string>
    <string name="snackbar_pwr_btn_off">Power Off</string>
    <string name="request_perms_alert_dialog_title">Permission Needed</string>
...
    <string name="back_key_pressed_title">Are you sure ?</string>
    <string name="back_key_pressed_message">This will exit the application</string>
    <string name="back_key_pressed_positive_btn">Yes</string>
    <string name="back_key_pressed_negative_btn">No</string>
    <string name="menu_bar_help_btn_title">Help</string>
    <string name="menu_bar_music_btn_title">Music</string>
    <string name="menu_bar_lights_pwr_btn_title">Power</string>
    <string name="menu_bar_bluetooth_btn_title">Bluetooth</string>
    <string name="lock_portrait">Portrait Lock</string>
    <string name="portrait_lock_disable">Portrait Lock Disabled</string>
    <string name="select_mode">Select light mode:</string>
    <string name="select_light_mode">Please select light mode</string>
    <string name="party_mode">Party</string>
...
        <item>Regard - Ride It</item>
        <item>SAINt Jhn - Roses</item>
    </string-array>

    <string name="title_review">Review</string>
    <string name="title_settings">Settings</string>
    <string name="title_lights">Lights</string>
    <string name="title_music">Music</string>
    <string name="review_page">Your Review matters!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="enter_a_email_address">Enter A Email Address</string>
    <string name="enter_a_comment">Enter A Comment</string>
...
