...
    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/music_icon_foreground"
        android:title="@string/title_music" />

    <item
        android:id="@+id/navigation_lights"
        android:icon="@drawable/light_icon_foreground"
        android:title="@string/title_lights" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_icon_foreground"
...
